--- a/firstproject/src/main/resources/application.properties
+++ b/firstproject/src/main/resources/application.properties
@@ -40,6 +40,9 @@ spring.h2.console.enabled=true
 
 # H2 콘솔 접속 경로 (예: http://localhost:8080/h2-console)
 spring.h2.console.path=/h2-console
+spring.sql.init.mode=always
+
+spring.jpa.defer-datasource-initialization=true
 
 
 
