--- a/firstproject/src/main/resources/application.properties
+++ b/firstproject/src/main/resources/application.properties
@@ -44,6 +44,12 @@ spring.sql.init.mode=always
 
 spring.jpa.defer-datasource-initialization=true
 
+# ===============================
+# JPA로깅 설정
+# ===============================
+# 디버그 레벨로 쿼리 출력
+logging.level.org.hibernate.SQL = DEBUG
+
 
 
 
