--- a/firstproject/src/main/resources/application.properties
+++ b/firstproject/src/main/resources/application.properties
@@ -48,7 +48,7 @@ spring.jpa.defer-datasource-initialization=true
 # JPA로깅 설정
 # ===============================
 # 디버그 레벨로 쿼리 출력
-logging.level.org.hibernate.SQL = DEBUG
+# logging.level.org.hibernate.SQL = DEBUG
 
 
 
